--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,8 @@
         dataType : 'script',
       });
     }
-    <% if Rails.env != :development %>
+
+    <% if Rails.env != "development" %>
       setInterval(reloadNotifyArea, 5000);
     <% end %>
   });
