--- a/app/views/customers/_form_tel_number.html.erb
+++ b/app/views/customers/_form_tel_number.html.erb
@@ -13,21 +13,21 @@
                 <% tel_number_err = true if customer.errors.include?(:tel_number) %>
                 <%= f.label :tel_number, { class: "#{ tel_number_err ? 'is-invalid' : '' }" } %>
                 <div class="form-row align-items-center">
-                  <div class="col-3">
+                  <div class="col-4">
                     <%= f.telephone_field :tel_number1, {
                       maxlength:3,
                       class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
                       onKeyup: "this.value=this.value.replace(/[^0-9]+/i,''); nextField(this, 'customer_tel_number2', 3)"
                     } %>
                   </div>
-                  <div class="col-3">
+                  <div class="col-4">
                     <%= f.telephone_field :tel_number2, {
                       maxlength:4,
                       class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
                       onKeyup: "this.value=this.value.replace(/[^0-9]+/i,''); nextField(this, 'customer_tel_number3', 4)"
                     } %>
                   </div>
-                  <div class="col-3">
+                  <div class="col-4">
                     <%= f.telephone_field :tel_number3, {
                       maxlength:4,
                       class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
@@ -36,11 +36,15 @@
                   </div>
                 </div>
                 <span class="error invalid-feedback"><%= customer.errors.full_messages_for(:tel_number).first %></span>
+
+                <div class="form-group pt-3">
+                  <%= text_field_tag :introducer_invite_code, '', { class: 'form-control', placeholder: t('common.invite_code'), maxlength: 10 } %>
+                </div>
               </div>
             </div>
 
             <div class="card-footer">
-              <%= f.submit class: 'btn btn-primary', value: '次へ', data: { disable_with: '　送信中...　' } %>
+              <%= f.submit class: 'btn btn-primary', value: t('common.next'), data: { disable_with: t('common.submit_disable_with') } %>
             </div>
           <% end %>
         </div>
