デザイン調整

--- a/app/views/customers/_form_tel_number.html.erb
+++ b/app/views/customers/_form_tel_number.html.erb
@@ -39,6 +39,7 @@
 
                 <div class="form-group pt-3">
                   <%= text_field_tag :introducer_invite_code, '', { class: 'form-control', placeholder: t('common.invite_code'), maxlength: 10 } %>
+                  <small><%= t('.annotation') %></small>
                 </div>
               </div>
             </div>
