--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -86,10 +86,12 @@
                 </tr>
               <% end %>
 
-              <tr>
-                <th class="text-nowrap"><%= Customer.human_attribute_name(:introducer) %></th>
-                <td><%= link_to @customer.introducer.name.to_s, customer_path(@company.code, @customer.introducer), { class: 'text-info' } if @customer.introducer %>&nbsp;<a href="javascript:void(0)" id="change_introducer_button", class="btn btn-default float-right"><i class="fas fa-user-edit text-primary foloat-right"></i></a></td>
-              </tr>
+              <% if @company.is_inviting_feature? %>
+                <tr>
+                  <th class="text-nowrap"><%= Customer.human_attribute_name(:introducer) %></th>
+                  <td><%= link_to @customer.introducer.name.to_s, customer_path(@company.code, @customer.introducer), { class: 'text-info' } if @customer.introducer %>&nbsp;<a href="javascript:void(0)" id="change_introducer_button", class="btn btn-default float-right"><i class="fas fa-user-edit text-primary foloat-right"></i></a></td>
+                </tr>
+              <% end %>
             </tbody>
           </table>
         </div>
@@ -122,53 +124,58 @@
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title"><%= Customer.human_attribute_name(:invited_people) %><%= "（#{ @customer.invited_people.size() } 人）" %></h3>
-        </div>
+      <% if @company.is_inviting_feature? %>
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title"><%= Customer.human_attribute_name(:invited_people) %><%= "（#{ @customer.invited_people.size() } 人）" %></h3>
+          </div>
 
-        <div class="card-body">
-          <% @customer.invited_people.each { |customer| %>
-            <p><%= link_to customer.name.to_s, customer_path(@company.code, customer), { class: 'text-info' } %></p>
-          <% } if @customer.invited_people.present? %>
+          <div class="card-body">
+            <% @customer.invited_people.each { |customer| %>
+              <p><%= link_to customer.name.to_s, customer_path(@company.code, customer), { class: 'text-info' } %></p>
+            <% } if @customer.invited_people.present? %>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </section>
 
-<div id="notice_modal" data-izimodal-title="<%= t('common.introducer_changing') %>" data-izimodal-subtitle="紹介者：<%= @customer.try(:name) || t('common.nothing') %>">
-  <p>
-    <div class="col p-3">
-      <%= form_with(id: 'modal_form', url: xhr_get_customers_customers_path, method: :get) do |form| %>
-        <%= form.text_field :name, { id: 'modal_form_name_input',class: "form-control", placeholder: t('common.name') } %>
-      <% end %>
-      <p id="customer_list"></p>
-      <%= form_with(id: 'modal_form_introducer_update', url: update_introducer_customer_path(@company.code, @customer.id), method: :post, local: true) do |form| %>
-        <%= form.hidden_field :introducer_id, id: :modal_introducer_id_hidden %>
-      <% end %>
-    </div>
-  </p>
-</div>
+<% if @company.is_inviting_feature? %>
+  <div id="notice_modal" data-izimodal-title="<%= t('common.introducer_changing') %>" data-izimodal-subtitle="紹介者：<%= @customer.try(:name) || t('common.nothing') %>">
+    <p>
+      <div class="col p-3">
+        <%= form_with(id: 'modal_form', url: xhr_get_customers_customers_path, method: :get) do |form| %>
+          <%= form.text_field :name, { id: 'modal_form_name_input',class: "form-control", placeholder: t('common.name') } %>
+        <% end %>
+        <p id="customer_list"></p>
+        <%= form_with(id: 'modal_form_introducer_update', url: update_introducer_customer_path(@company.code, @customer.id), method: :post, local: true) do |form| %>
+          <%= form.hidden_field :introducer_id, id: :modal_introducer_id_hidden %>
+        <% end %>
+      </div>
+    </p>
+  </div>
 
-<%= javascript_tag do %>
-  $(function() {
-    $('#notice_modal').iziModal();
-    $('#change_introducer_button').on('click', function() {
-      $('#notice_modal').iziModal('open');
-    });
 
-    $('#modal_form_name_input').on('input', function(){
-      if($(this).val().trim() != '') {
-        $.rails.fire($('#modal_form')[0], 'submit');
-      }
-    });
+  <%= javascript_tag do %>
+    $(function() {
+      $('#notice_modal').iziModal();
+      $('#change_introducer_button').on('click', function() {
+        $('#notice_modal').iziModal('open');
+      });
 
-    $(document).on('click', '.select_customer', function (){
-      $('#modal_introducer_id_hidden').val($(this).data('customer_id'));
-      if (window.confirm($(this).text() + ' さんに紹介者を変更してよろしいですか？')) {
-        $('#modal_form_introducer_update').submit();
-      }
+      $('#modal_form_name_input').on('input', function(){
+        if($(this).val().trim() != '') {
+          $.rails.fire($('#modal_form')[0], 'submit');
+        }
+      });
+
+      $(document).on('click', '.select_customer', function (){
+        $('#modal_introducer_id_hidden').val($(this).data('customer_id'));
+        if (window.confirm($(this).text() + ' さんに紹介者を変更してよろしいですか？')) {
+          $('#modal_form_introducer_update').submit();
+        }
+      });
     });
-  });
+  <% end %>
 <% end %>
