会社毎の表示入力制御漏れ

--- a/app/views/customers/new_line_message.html.erb
+++ b/app/views/customers/new_line_message.html.erb
@@ -32,22 +32,40 @@
                 <div class="direct-chat-messages" style="height: 320px;">
                   <table class="table table-bordered">
                     <tbody>
-                      <tr>
-                        <th class="text-nowrap"><%= Customer.human_attribute_name(:name) %></th>
-                        <td><%= @customer.name.to_s %>（<%= @customer.name_kana.to_s %>）</td>
-                      </tr><tr>
-                        <th class="text-nowrap"><%= Customer.human_attribute_name(:gender) %></th>
-                        <td><%= Customer.human_attribute_name("gender.#{ @customer.gender }") %></td>
-                      </tr><tr>
-                        <th class="text-nowrap"><%= Customer.human_attribute_name(:tel_number) %></th>
-                        <td><%= @customer.formatted_tel_number.to_s %></td>
-                      </tr><tr>
-                        <th class="text-nowrap"><%= Customer.human_attribute_name(:birthday) %></th>
-                        <td><%= @customer.birthday.strftime("%Y年%m月%d日") if @customer.birthday %></td>
-                      </tr><tr>
-                        <th class="text-nowrap"><%= Customer.human_attribute_name(:address) %></th>
-                        <td><%= @customer.all_address  %></td>
-                      </tr>
+                      <% if @company.is_input_customer_name? %>
+                        <tr>
+                          <th class="text-nowrap"><%= Customer.human_attribute_name(:name) %></th>
+                          <td><%= @customer.name.to_s %>（<%= @customer.name_kana.to_s %>）</td>
+                        </tr>
+                      <% end %>
+
+                      <% if @company.is_input_customer_name_kana? %>
+                        <tr>
+                          <th class="text-nowrap"><%= Customer.human_attribute_name(:gender) %></th>
+                          <td><%= Customer.human_attribute_name("gender.#{ @customer.gender }") %></td>
+                        </tr>
+                      <% end %>
+
+                      <% if @company.is_input_customer_tel_number? %>
+                        <tr>
+                          <th class="text-nowrap"><%= Customer.human_attribute_name(:tel_number) %></th>
+                          <td><%= @customer.formatted_tel_number.to_s %></td>
+                        </tr>
+                      <% end %>
+
+                      <% if @company.is_input_customer_birthday? %>
+                        <tr>
+                          <th class="text-nowrap"><%= Customer.human_attribute_name(:birthday) %></th>
+                          <td><%= @customer.birthday.strftime("%Y年%m月%d日") if @customer.birthday %></td>
+                        </tr>
+                      <% end %>
+
+                      <% if @company.is_input_customer_address? %>
+                        <tr>
+                          <th class="text-nowrap"><%= Customer.human_attribute_name(:address) %></th>
+                          <td><%= @customer.all_address  %></td>
+                        </tr>
+                      <% end %>
                     </tbody>
                   </table>
                 </div>
