--- a/app/views/layouts/_main_footer.html.erb
+++ b/app/views/layouts/_main_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="main-footer">
 
   <div class="float-right d-none d-sm-inline">
-    <% if current_user.try(:over_staff_or_more?) %>
+    <% if false #current_user.try(:over_staff_or_more?) %>
       <%= t('.confirmation_code', code: @company.visit_confirmation_code) %>
     <% end %>
   </div>
