未読メッセージありのLINEメッセージ送信機能

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title><%= @company.try(:name) || 'hairs.fun' %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="XXXXX" />
-  <meta name="keywords" content="YYYY" />
+  <meta name="description" content="<%= @company.try(:name) || 'hairs.fun' %>" />
+  <meta name="keywords" content="<%= @company.try(:name) || 'hairs.fun' %>" />
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
