デグレ修正

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -185,7 +185,7 @@
 
     function nextField(i, n, m) {
       if (i.value.length >= m) {
-        i.f.elements[n].focus();
+        i.form.elements[n].focus();
       }
     }
   <% end %>
