トップ画面のLINE通知数タイトルをLINE連携した顧客数を表示

--- a/app/views/public/homes/index_for_system.html.erb
+++ b/app/views/public/homes/index_for_system.html.erb
@@ -22,7 +22,7 @@
 
           <div class="info-box-content">
             <span class="info-box-text"><%= t('.line_notify') %></span>
-            <span class="info-box-number"><%= @company.customers.size() %></span>
+            <span class="info-box-number"><%= @company.users.where(role: :customer).where('line_user_id IS NOT NULL').size() %></span>
             <span class="info-box-number">
               <%= @company.get_current_month_line_message_count.to_s(:delimited) %>
               <small>/<%= @company.limit_line_message_count.to_s(:delimited) %></small>
